initial text to voice service

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 
 <ul>
     <li>Standard voice generation (Batch processing)</li>
-    <li>Text-to-speech REST/JSON services</li>
+    <li>Text-to-speech REST/JSON services (<a href="/voice/johnny">example</a>)</li>
     <li>Persistence to Cloud Object Storage</li>
 </ul>
 </body>
