add support for basic voice presets

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,9 +9,14 @@
 <h1>Voice Service</h1>
 
 <ul>
-    <li>Standard voice generation (Batch processing)</li>
-    <li>Text-to-speech REST/JSON services (<a href="/voice/johnny">example</a>)</li>
-    <li>Persistence to Cloud Object Storage</li>
+    <li>Standard voice generation (Batch processing) - TODO</li>
+    <li>Text-to-speech REST/JSON services - EXAMPLES</li>
+        <ul>
+            <li><a href="/voice/johnny">'johnny' (default = PRESET_1)</a></li>
+            <li><a href="/voice/johnny?preset=PRESET_2">'johnny' (PRESET_2)</a></li>
+            <li><a href="/voice/johnny?preset=PRESET_3">'johnny' (PRESET_3)</a></li>
+        </ul>
+    <li>Persistence to Cloud Object Storage - TODO</li>
 </ul>
 </body>
 </html>
